@@ -9,6 +9,7 @@
 * Fixed bug preventing append/prepend PDF in combination with set timestamp
 * Catch error setting timestamp for dates prior to 1970.
   Closes bug #234 (seems to be stuck after closing the pdf)
+* Correctly scale boundary boxes when importing text layer of PDF
 
 
 1.6.0 (02.12.2016):
